otherStandard/objects/T1807_1__c/T1807_1__c.object-meta.xml
<CustomObject>
    <label>T1807_1</label>
    <nameField>
        <label>T1807_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1807_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>