otherStandard/objects/T1807_1__c/fields/Check2__c.field-meta.xml
<CustomField>
    <fullName>Check2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>some description</description>
    <label>Check2</label>
    <type>Checkbox</type>
</CustomField>