otherStandard/objects/T1807_1__c/fields/picklist1__c.field-meta.xml
<CustomField>
    <fullName>picklist1__c</fullName>
    <label>picklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Melon</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>