otherStandard/objects/T1807_1__c/fields/TextField1__c.field-meta.xml
<CustomField>
    <fullName>TextField1__c</fullName>
    <label>TextField1</label>
    <length>123</length>
    <type>Text</type>
</CustomField>